--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
+    "mongoose": "^7.2.0",
+    "morgan": "^1.10.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.4",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22"
   }
