--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
